# ayon-googledrive

./: .gitignore  README.md  ayon-googledrive.code-workspace  create_package.py  package.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
client/ayon_googledrive/: __init__.py  addon.py  constants.py  gdrive_installer.py  logger.py  vendor.py  version.py
client/ayon_googledrive/api/: gdrive_manager.py  lib.py  logger.py
client/ayon_googledrive/ui/: menu_builder.py  notifications.py
googledrive-0.1.0/client/ayon_googledrive/: __init__.py
googledrive-0.1.0/client/ayon_googledrive/api/: gdrive_manager.py  logger.py
server/: __init__.py
server/settings/: __init__.py  main.py
