[project]
name = "ayon-googledrive"
version = "0.4.2"
description = ""
authors = [{ name = "Aleks Berland", email = "aleks@fuzzking.cool" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ayon-python-api (>=1.1.0,<2.0.0)",
    "qtpy (>=2.4.3,<3.0.0)",
    "ayon (>=0.1.0,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ayon-googledrive"
version = "0.4.2"
package-mode = false
[tool.poetry.group.pyblish.dependencies]
pyblish = "^1.7.0"

[tool.poetry.group.media.dependencies]
pillow = "^10.0.0"

[tool.poetry.group.pydantic.dependencies]
pydantic = "^2.11.3"


[tool.poetry.group.openimageio.dependencies]

